# loft

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  chat.loft.Loft.yml  justfile
data/: chat.loft.Loft.desktop  chat.loft.Loft.metainfo.xml
extension/: background.js  content.js  loft-overrides.js  manifest.json  notification-override.js  offscreen.html
flatpak/flathub/: chat.loft.Loft.desktop  chat.loft.Loft.metainfo.xml  chat.loft.Loft.yml
gnome-shell-extension/: extension.js  metadata.json
src/: autostart.rs  chrome.rs  cli.rs  config.rs  desktop.rs  logging.rs  main.rs  service.rs
src/combined_tray/: gnome.rs  mod.rs  tray.rs
src/daemon/: background_status.rs  combined_tray.rs  dbus.rs  gnome_shell.rs  kwin.rs  messaging.rs  mod.rs  notifications.rs  tray.rs
src/manager/: mod.rs  window.rs
tests/: config_test.rs  dbus_integration.rs  messaging_integration.rs
