[package]
name = "loft"
version = "0.1.0"
edition = "2021"
description = "Linux desktop integration layer for messaging apps"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
ksni = "0.3"
libc = "0.2"
libadwaita = { version = "0.8", features = ["v1_5"] }
gtk4 = { version = "0.10", features = ["v4_10"] }
reqwest = { version = "0.13", features = ["rustls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
