[package]
name = "loft"
version = "0.1.1"
edition = "2021"
description = "Linux desktop integration layer for messaging apps"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
ksni = "0.3"
libc = "0.2"
libadwaita = { version = "0.8", features = ["v1_5"] }
gtk4 = { version = "0.10", features = ["v4_10"] }
reqwest = { version = "0.13", features = ["rustls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tungstenite = "0.29"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/loft", dest = "/usr/bin/loft", mode = "0755" },
    { source = "data/chat.loft.Loft.desktop", dest = "/usr/share/applications/chat.loft.Loft.desktop", mode = "0644" },
    { source = "data/chat.loft.Loft.metainfo.xml", dest = "/usr/share/metainfo/chat.loft.Loft.metainfo.xml", mode = "0644" },
    { source = "assets/icons/loft.svg", dest = "/usr/share/icons/hicolor/scalable/apps/chat.loft.Loft.svg", mode = "0644" },
]

[package.metadata.deb]
maintainer = "Keith Vassallo"
section = "net"
depends = "$auto"
assets = [
    ["target/release/loft", "usr/bin/", "755"],
    ["data/chat.loft.Loft.desktop", "usr/share/applications/", "644"],
    ["data/chat.loft.Loft.metainfo.xml", "usr/share/metainfo/", "644"],
    ["assets/icons/loft.svg", "usr/share/icons/hicolor/scalable/apps/chat.loft.Loft.svg", "644"],
]
